Fix point definition
changed points to integer and removed from items

--- a/src/main/resources/db/changelog/001_purchases.yaml
+++ b/src/main/resources/db/changelog/001_purchases.yaml
@@ -33,6 +33,6 @@ databaseChangeLog:
                     nullable: false
               - column:
                   name: points
-                  type: decimal(10,2)
+                  type: integer
                   constraints:
                     nullable: false
